--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome Viaan Kolla with your parents!!!</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">V is building Web apps with ASP.NET Core</a>.</p>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">Viaan is building Web apps with ASP.NET Core</a>.</p>
 </div>
