--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,4 +7,5 @@
 <div class="text-center">
     <h1 class="display-4">Welcome Viaan Kolla with your parents!!!</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">Viaan Kolla is building Web apps with ASP.NET Core</a>.</p>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">Viaan, how did you enjoy your night stay at Surya</a>.</p>
 </div>
